added RabbitMq address

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=appointment-booking
 server.port=${PORT:8080}
+spring.rabbitmq.addresses=amqps://mzgmorhm:ehwlNnbtYjI0ycqxiiEvvEFPQQhfAhtl@possum.lmq.cloudamqp.com/mzgmorhm
 
 # H2 Console
 spring.h2.console.enabled=true
